--- a/frontend/src/components/elements/DockerHubSearch/DockerHubSearch.scss
+++ b/frontend/src/components/elements/DockerHubSearch/DockerHubSearch.scss
@@ -1,4 +1,4 @@
-@import '../../variables.css';
+@import '../../../css/colors';
 
 .DockerHubSearch {
   margin: 0 auto;
@@ -9,7 +9,7 @@
   width: 100%;
   padding: 10px 10px;
   font-weight: normal;
-  color: var(--color-black);
+  color: $color-black;
   display: inline-block;
   box-sizing: border-box;
   border: 1px solid #cccccc;
