--- a/frontend/src/components/elements/HeaderSmall/HeaderSmall.scss
+++ b/frontend/src/components/elements/HeaderSmall/HeaderSmall.scss
@@ -1,7 +1,7 @@
-@import '../../variables.css';
+@import '../../../css/colors';
 
 .HeaderSmall {
-  background: var(--color-primary);
+  background: $color-primary;
   color: #fff;
 }
 
