--- a/frontend/src/components/variables.css
+++ b/frontend/src/components/variables.css
@@ -1,76 +1,131 @@
-:root {
+.white-base {
+    color: hsl(255, 255, 255);
+}
 
-  /*
-   * Colors
-   * ======================================================================== */
+.color-primary-shade-darker-4 {
+    color: #070a0d;
+}
 
-  --white-base:            hsl(255, 255, 255);
-  --gray-darker:           color(black lightness(+13.5%)); /* #222 */
-  --gray-dark:             color(black lightness(+25%));   /* #404040 */
-  --gray:                  color(black lightness(+33.5%)); /* #555 */
-  --gray-light:            color(black lightness(+46.7%)); /* #777 */
-  --gray-lighter:          color(black lightness(+93.5%)); /* #eee */
+.color-primary-shade-darker-3 {
+    color: #0e141b;
+}
 
-  --color-primary-shade-darker-4: #070a0d;
-  --color-primary-shade-darker-3: #0e141b;
-  --color-primary-shade-darker-2: #151E28;
-  --color-primary-shade-darker-1: #1D2835;
-  --color-primary: #233141;
-  --color-primary-shade-lighter-1: #2A3C50;
-  --color-primary-shade-lighter-2: #32465D;
-  --color-primary-shade-lighter-3: #39506A;
-  --color-primary-shade-lighter-4: #56789f;
+.color-primary-shade-darker-2 {
+    color: #151E28;
+}
 
-  --color-sidemenu: #d3d6d9;
-  --color-text-selected: #464749;
-  --color-text: #6a6c6f;
-  --color-text-hover: #8D8E91;
-  --color-footer: #101010;
-  --color-success: #41b222;
+.color-primary-shade-darker-1 {
+    color: #1D2835;
+}
 
-  --color-white-shade-darker-5: #999999;
-  --color-white-shade-darker-4: #ADADAD;
-  --color-white-shade-darker-3: #C2C2C2;
-  --color-white-shade-darker-2: #dddddd;
-  --color-white-shade-darker-1: #fafafa;
-  --color-white: #FFFFFF;
-  --color-black: #000000;
-  --color-black-shade-lighter-1: #0A0A0A;
-  --color-black-shade-lighter-2: #141414;
+.color-primary {
+    color: #233141;
+}
 
-  --color-accent: #f15843;
-  --color-accent-shade-darker-1: #EB5A47;
-  --color-accent-shade-lighter-1: #FF4B33;
+.color-primary-shade-lighter-1 {
+    color: #2A3C50;
+}
 
-  --color-terminal: #555;
-  --color-terminal-text-shadow: #1f1f1f;
-  --color-terminal-text: #D6D6D6;
+.color-primary-shade-lighter-2 {
+    color: #32465D;
+}
 
-  /*
-   * Typography
-   * ======================================================================== */
+.color-primary-shade-lighter-3 {
+    color: #39506A;
+}
 
-  --font-family-base:      'Segoe UI', 'HelveticaNeue-Light', sans-serif;
+.color-primary-shade-lighter-4 {
+    color: #56789f;
+}
 
-  /*
-   * Layout
-   * ======================================================================== */
+.color-sidemenu {
+    color: #d3d6d9;
+}
 
-  --max-content-width:     1000px;
+.color-text-selected {
+    color: #464749;
+}
 
-  /*
-   * Media queries breakpoints
-   * ======================================================================== */
+.color-text {
+    color: #6a6c6f;
+}
 
-  --screen-xs-min:         480px;  /* Extra small screen / phone */
-  --screen-sm-min:         768px;  /* Small screen / tablet */
-  --screen-md-min:         992px;  /* Medium screen / desktop */
-  --screen-lg-min:         1200px; /* Large screen / wide desktop */
+.color-text-hover {
+    color: #8D8E91;
+}
 
-  /*
-   * Animations
-   * ======================================================================== */
+.color-footer {
+    color: #101010;
+}
 
-  --animation-swift-out:   .45s cubic-bezier(0.3, 1, 0.4, 1) 0s;
+.color-success {
+    color: #41b222;
+}
 
+.color-white-shade-darker-5 {
+    color: #999999;
+}
+
+.color-white-shade-darker-4 {
+    color: #ADADAD;
+}
+
+.color-white-shade-darker-3 {
+    color: #C2C2C2;
+}
+
+.color-white-shade-darker-2 {
+    color: #dddddd;
+}
+
+.color-white-shade-darker-1 {
+    color: #fafafa;
+}
+
+.color-white {
+    color: #FFFFFF;
+}
+
+.color-black {
+    color: #000000;
+}
+
+.color-black-shade-lighter-1 {
+    color: #0A0A0A;
+}
+
+.color-black-shade-lighter-2 {
+    color: #141414;
+}
+
+.color-accent {
+    color: #f15843;
+}
+
+.color-accent-shade-darker-1 {
+    color: #EB5A47;
+}
+
+.color-accent-shade-lighter-1 {
+    color: #FF4B33;
+}
+
+.color-terminal {
+    color: #555;
+}
+
+.color-terminal-text-shadow {
+    color: #1f1f1f;
+}
+
+.color-terminal-text {
+    color: #D6D6D6;
+}
+
+.font-family-base {
+    font-family: 'Segoe UI', 'HelveticaNeue-Light', sans-serif;
+}
+
+.max-content-width {
+    color: 1000px;
 }
