--- a/frontend/src/components/elements/DistributionPicker/DistributionPicker.scss
+++ b/frontend/src/components/elements/DistributionPicker/DistributionPicker.scss
@@ -1,4 +1,4 @@
-@import '../../variables.css';
+@import '../../../css/colors';
 
 .DistributionPicker-FlexContainer {
   display: flex;
@@ -36,6 +36,6 @@
 }
 
 .DistributionPicker-PickDistribution-Selected {
-    border: 1px solid var(--color-success);
-    color: var(--color-success);
+    border: 1px solid $color-success;
+    color: $color-success;
 }
