--- a/frontend/src/components/elements/Dropdown/Dropdown.scss
+++ b/frontend/src/components/elements/Dropdown/Dropdown.scss
@@ -1,10 +1,10 @@
-@import '../../variables.css';
+@import '../../../css/colors';
 
 .Dropdown select {
     margin: 0;
     width: 90%;
     background: url("./option-dropdown.png") no-repeat right #FFF;
-    color: var(--color-black);
+    color: $color-black;
     border: 0;
     border-radius: 0;
     -webkit-appearance: none;
@@ -16,11 +16,11 @@
 }
 
 .Dropdown-Selected {
-  color: var(--color-success) !important;
+  color: $color-success !important;
 }
 
 .Dropdown-Selected select {
   background: url("./option-dropdown-success.png") no-repeat right #FFF !important;
-  color: var(--color-success) !important;
+  color: $color-success !important;
   text-align: center;
 }
