--- a/frontend/src/components/elements/HeaderSmall/HeaderSmall.scss
+++ b/frontend/src/components/elements/HeaderSmall/HeaderSmall.scss
@@ -1,28 +1,34 @@
 @import '../../../css/colors';
 
 .HeaderSmall {
-  background: $color-primary;
-  color: #fff;
+    background: $color-primary;
+    color: #fff;
 }
 
-.HeaderSmall-container {
-  margin: 0 auto;
-  padding: 20px 40px;
+.container {
+    margin: 0 auto;
+    padding: 20px 40px;
 }
 
-.HeaderSmall-Navigation {
-  float: right;
+.Navigation {
+    float: right;
+    margin-top: 10px;
 }
 
-.HeaderSmall-Navigation a {
+.Navigation a {
     color: #fff;
     margin-left: 20px;
     font-size: 16px;
     font-weight: bold;
     letter-spacing: 1px;
+    text-decoration: none;
 }
 
-.HeaderSmall .Logo {
-  float: left;
-  height: auto;
+.Logo {
+    float: left;
+    height: auto;
+}
+
+.clear {
+    clear: both;
 }
