--- a/frontend/src/components/elements/Divider/Divider.scss
+++ b/frontend/src/components/elements/Divider/Divider.scss
@@ -5,7 +5,6 @@
 }
 
 .Divider span {
-    padding: 0 10px;
     background: #FFF;
     text-transform: uppercase;
     font-weight: bold;
@@ -16,16 +15,17 @@
 }
 
 .Divider-Horizontal {
-    border-bottom: 1px solid $color-white-shade-darker-2;
+    border-bottom: 1px solid $colorBorder;
     width: 100%;
     line-height: 0.1em;
     margin: 20px 0;
 }
 
 .Divider-Vertical {
-    border-right: 1px solid $color-white-shade-darker-2;
+    border-right: 1px solid $colorBorder;
     width: 1px;
-    height: 100%;
+    height: 20px;
     display: inline-block;
     float: left;
+    margin-top: 25px;
 }
