--- a/frontend/src/css/colors.scss
+++ b/frontend/src/css/colors.scss
@@ -1,3 +1,15 @@
+/**
+ * New Colors
+ */
+$colorPrimary: #233141;
+$colorTextPrimary: #233141;
+$colorTextLight: #999999;
+$colorTextMedium: #666666;
+$colorTextDark: #333333;
+$colorTextAnchor: #3b5998; // To be changed
+$colorBackground: #edeff5;
+$colorBorder: #dadada;
+
 /*
 * Colors
 * ======================================================================== */
