--- a/frontend/src/components/elements/Table/Table.scss
+++ b/frontend/src/components/elements/Table/Table.scss
@@ -1,7 +1,12 @@
+@import '../../../css/dimensions';
+@import '../../../css/colors';
+
 .Table {
 	width: 100%;
+	height: 100%;
 	border-radius: 3px;
 	border: 1px solid rgba(0, 0, 0, 0.05);
+	font-size: $dimensionTextSmaller;
 }
 
 .Table > thead {
