--- a/frontend/src/css/colors.scss
+++ b/frontend/src/css/colors.scss
@@ -8,6 +8,7 @@ $colorTextMedium: #666666;
 $colorTextDark: #333333;
 $colorTextAnchor: #3b5998; // To be changed
 $colorBackground: #edeff5;
+$colorContainer: #ffffff;
 $colorBorder: #dadada;
 
 /*
