--- a/frontend/src/css/colors.scss
+++ b/frontend/src/css/colors.scss
@@ -9,7 +9,7 @@ $colorTextDark: #333333;
 $colorTextAnchor: #3b5998; // To be changed
 $colorBackground: #edeff5;
 $colorContainer: #ffffff;
-$colorBorder: #dadada;
+$colorBorder: #e3e4e6;
 
 /*
 * Colors
