--- a/frontend/src/components/elements/Input/Input.scss
+++ b/frontend/src/components/elements/Input/Input.scss
@@ -1,23 +1,23 @@
 @import '../../../css/colors';
 
-.Input > label {
-  display: block;
-  font-size: 14px;
-  font-weight: normal;
-  letter-spacing: 2px;
+.Input label {
+    display: block;
+    font-size: 14px;
+    font-weight: normal;
+    letter-spacing: 1px;
 }
 
-.Input > input {
-  margin: 0 auto;
-  padding: 5px 10px;
-  width: 100%;
-  margin: 2px 0 15px 0;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+.Input input {
+    margin: 0 auto;
+    padding: 7px 10px;
+    width: 100%;
+    margin: 2px 0 15px 0;
+    border: 1px solid $colorBorder;
 }
 
 .validation-error {
-  border: 1px solid red;
-  color: red;
+    border: 1px solid red;
+    color: red;
 }
 
 .validation-errors > li{
