--- a/frontend/src/components/elements/List/List.scss
+++ b/frontend/src/components/elements/List/List.scss
@@ -6,30 +6,25 @@
 }
 
 .List li {
-  border: 1px solid $color-white-shade-darker-2;
   border-bottom: none;
   position: relative;
   display: flex;
   align-items: stretch;
+  background-color: $colorContainer;
+  margin: 5px 0;
+  border: 1px solid $colorBorder;
+  border-radius: 5px;
 }
 
 .List li > span {
-  padding: 0 10px;
+  padding: 7px 10px;
   align-self: center;
-}
-
-.List li:nth-child(odd) {
-  border-bottom: none;
-}
-
-.List li:last-child {
-  border-bottom: 1px solid $color-white-shade-darker-2;
 }
 
 .List Button:first-child {
   color: $color-white-shade-darker-5;
-  background-color: $color-white-shade-darker-1;
-  border: 1px solid rgba(0, 0, 0, 0.07);
+  background-color: $colorContainer;
+  border: none;
 }
 
 .List Button:last-child {
@@ -38,4 +33,5 @@
 
 .List Button {
   text-align: center;
+  width: 38px;
 }
