--- a/frontend/src/components/App/App.scss
+++ b/frontend/src/components/App/App.scss
@@ -18,6 +18,15 @@ h1 {
     font-size: $dimensionTextTitle;
 }
 
+form label {
+    display: block;
+}
+
+form input {
+    padding: 6px 10px;
+    width: 100%;
+    margin: 6px 0;
+}
 /*
 * Global styles
 * ========================================================================== */
