Fixed the rerendering @ edit, also css fix on sidemenu

--- a/frontend/src/components/elements/SideMenu/SideMenu.scss
+++ b/frontend/src/components/elements/SideMenu/SideMenu.scss
@@ -7,6 +7,9 @@
     max-width: 200px;
     background-color: $color-primary-shade-lighter-1;
     font-weight: normal;
+
+    position: fixed;
+    height: 100%;
 }
 
 .SideMenu h1 {
