--- a/frontend/src/components/pages/Project/Project.scss
+++ b/frontend/src/components/pages/Project/Project.scss
@@ -1,58 +1,17 @@
 @import '../../../css/colors';
 @import '../../../css/dimensions';
 
-.ContainerRight {
-    //background-color: $colorContainer;
-    height: 100%;
-    padding: 10px 20px;
-    border-left: 1px solid $colorBorder;
-}
 
-.ContainerRight > ul {
-    list-style: none;
-}
+.project_sidebar {
+  border-left: 1px solid $colorBorder;
+  height:100%;
+  padding:20px;
 
-.ContainerRight > ul > li {
-    background-color: $colorContainer;
-    padding: 15px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    border: 1px solid lighten($colorBorder, 5%);
-    position: relative;
-}
-
-.ContainerRight > ul > li > * {
-    float: left;
-}
-
-.ContainerRight > ul > li > span {
-    margin-left: 20px;
-    line-height: 40px;
-}
-
-.ContainerRight > ul > li > button {
-    float: right;
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    width: 40px;
-    background: none;
-    border: none;
-    border-left: 1px solid $colorBorder;
-}
-
-.ContainerRightListItem {
-    margin-top: 2px;
-    margin-left: 10px;
-}
-.ContainerRightListItemName {
-    font-size: $dimensionTextNormal;
-}
-
-.ContainerRightListItemSubtitle {
-    color: $colorTextLight;
-    font-size: $dimensionTextSmaller;
+  & > h2 {
+    font-size: 14pt;
+    color: $color-primary-shade-lighter-4;
+    margin:10px 0 0 0;
+  }
 }
 
 .ContainerBottom {
@@ -78,15 +37,4 @@
 .Clear {
     float: none !important;
     clear: both;
-}
-
-.assignable_list {
-  padding: 10px;
-  list-style:none;
-  background: white;
-
-  li {
-    padding:10px 0;
-
-  }
 }
